--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "checkTs": "tsc --noEmit",
     "format": "prettier '**/*.{css,json,js,ts,tsx,md,mdx}'",
@@ -42,11 +42,13 @@
     "clsx": "2.1.1",
     "graphql": "16.9.0",
     "graphql-ws": "5.14.0",
-    "lucide-react": "0.482.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "recharts": "2.15.1",
-    "tailwind-merge": "3.0.2",
+    "lucide-react": "0.525.0",
+    "next-themes": "0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "recharts": "3.1.0",
+    "sonner": "2.0.6",
+    "tailwind-merge": "3.3.1",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
@@ -81,9 +83,11 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-react-hooks": "5.2.0",
+    "globals": "16.3.0",
     "jsdom": "26.1.0",
     "prettier": "3.0.0",
     "tailwindcss": "4.1.11",
+    "tw-animate-css": "1.3.5",
     "typescript": "5.8.3",
     "vite": "7.0.4",
     "vitest": "3.2.4"
