--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@apollo/client": "3.12.5",
     "@heroicons/react": "2.2.0",
+    "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.14",
