--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "agilekit",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -14,28 +14,20 @@
     "test:e2e:headless": "playwright test --reporter=line"
   },
   "dependencies": {
-    "@heroicons/react": "2.2.0",
-    "@radix-ui/react-accordion": "1.2.12",
-    "@radix-ui/react-alert-dialog": "1.1.15",
-    "@radix-ui/react-dialog": "1.1.15",
-    "@radix-ui/react-dropdown-menu": "2.1.16",
-    "@radix-ui/react-label": "2.1.8",
-    "@radix-ui/react-select": "2.2.6",
-    "@radix-ui/react-separator": "1.1.8",
-    "@radix-ui/react-slot": "1.2.4",
-    "@radix-ui/react-switch": "1.2.6",
-    "@radix-ui/react-toast": "1.2.15",
-    "@radix-ui/react-tooltip": "1.2.8",
+    "@base-ui/react": "1.0.0",
+    "@hugeicons/core-free-icons": "3.1.1",
+    "@hugeicons/react": "1.1.4",
     "@xyflow/react": "12.10.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "convex": "1.31.1",
+    "convex": "1.31.2",
     "lodash": "4.17.21",
-    "lucide-react": "0.561.0",
+    "lucide-react": "0.562.0",
     "next": "16.1.1",
     "next-themes": "0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "shadcn": "3.6.2",
     "sonner": "2.0.7",
     "tailwind-merge": "3.4.0"
   },
