--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@base-ui/react": "1.0.0",
     "@hugeicons/core-free-icons": "3.1.1",
     "@hugeicons/react": "1.1.4",
+    "@vercel/speed-insights": "1.3.1",
     "@xyflow/react": "12.10.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
