--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "shadcn": "3.6.2",
     "shiki": "3.21.0",
     "sonner": "2.0.7",
-    "tailwind-merge": "3.4.0"
+    "tailwind-merge": "3.4.0",
+    "three": "0.182.0"
   },
   "devDependencies": {
     "@convex-dev/eslint-plugin": "1.1.1",
@@ -61,6 +62,7 @@
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/three": "0.182.0",
     "@vitest/coverage-v8": "4.0.18",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
