--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,16 @@ NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Google Analytics 4 Measurement ID (production only)
 # NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
+# Jira OAuth (Next.js server routes)
+# JIRA_CLIENT_ID=your-atlassian-client-id
+# JIRA_CLIENT_SECRET=your-atlassian-client-secret
+
+# Optional webhook secret header check. If enabled, your edge/proxy should
+# inject x-hub-secret on requests to /webhooks/jira.
+# JIRA_WEBHOOK_SECRET=your-shared-secret
+
+# Convex server-side encryption key (set via `npx convex env set`)
+# Must be exactly 32 bytes encoded as 64 hex characters.
+# Example:
+#   npx convex env set TOKEN_ENCRYPTION_KEY "$(openssl rand -hex 32)"
